# bearer

./: components.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: base.json  desktop.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: cmd.rs
src/assets/: index.css
src/components/: MutColumn.vue  VarInput.vue
src/hooks/: useEditor.ts
src/layouts/: main.vue  workspace.vue
src/router/: index.ts
src/tauri/: index.ts
src/types/: index.ts
src/utils/request/: index.ts
src/views/collection/: api.vue  main.vue  menu.vue
